third_party/move/move-compiler-v2/tests/bytecode-generator/wildcard1.exp

Diagnostics:
error: tuple type `(u64, u64)` is not allowed as a type argument
  ┌─ tests/bytecode-generator/wildcard1.move:7:13
  │
7 │         let _ = tup();
  │             ^
